Refactoring server side code and updating OpenAPI data models
