# server/src/controllers/themeController.ts
@@ -1,10 +1,16 @@
 import { Request, Response, NextFunction } from "express";
-import TagModel from "../models/tag";
+import { ThemeService } from "../services";
 
 export class ThemeController {
+    private themeService = new ThemeService();
+
+    constructor() {
+        this.getAllThemes = this.getAllThemes.bind(this);
+    }
+
     async getAllThemes(req: Request, res: Response, next: NextFunction) {
         try {
-            const themes = await TagModel.find().sort({ numberOfCards: -1 });
+            const themes = await this.themeService.getAllThemes();
             res.status(200).json(themes);
         } catch (error) {
             res.status(400).json({ message: (error as Error).message });
