# server/src/services/theme.ts
@@ -1,1 +1,7 @@
-export {}
+import TagModel from "../models/tag";
+
+export default class ThemeService {
+    public async getAllThemes() {
+        return await TagModel.find().sort("-numberOfCards");
+    }
+}
